--- a/README
+++ b/README
@@ -5,7 +5,7 @@ The library allows a process to change its title (as display by system tools
 such as ``ps`` and ``top``).
 
 The procedure is hardly portable between different system.
-A `good implementation`__ is provided by PostgreSQL__. 
+A `good implementation`_ is provided by PostgreSQL_. 
 
 
 .. good implementation: http://doxygen.postgresql.org/ps__status_8c-source.html
