Removed module name from the functions documentation.

--- a/README
+++ b/README
@@ -17,12 +17,12 @@ around it.
 Module content
 --------------
 
-``setproctitle.setproctitle(title)``
+``setproctitle(title)``
 
     Set *title* as the title for the current process.
 
 
-``setproctitle.getproctitle()``
+``getproctitle()``
 
     Return the current process title.
 
