--- a/HISTORY
+++ b/HISTORY
@@ -4,11 +4,16 @@ Releases history
 Currently in tip
 ~~~~~~~~~~~~~~~~
 
-- Module works on Windows.
+- Module works on Windows. Many thanks to `Develer`_ which provided a neat `GCC
+  package for Windows with Python integration`__ that made the Windows porting
+  painless.
 
   Notice that on Windows there is no way to change the process string.
   What the module does is to create a Named Object whose value can be read
   in tools such as Process Explorer.
+
+  .. _Develer: http://www.develer.com/
+  .. __: http://www.develer.com/oss/GccWinBinaries
 
 
 Version 0.3
