Don't clobber environ if SPT_NOENV is set
Clobbering environ breaks the procfs file /proc/PID/environ. If this file is
required, SPT_NOENV can be used, limiting the available area to argv only.

--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,12 @@
 Releases history
 ----------------
 
+Version 1.1.3
+~~~~~~~~~~~~~
+
+- Don't clobber environ if the variable SPT_NOENV is set (issue #16).
+
+
 Version 1.1.2
 ~~~~~~~~~~~~~
 
