setproctitle() accepts a keyword argument

--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,12 @@
 Releases history
 ----------------
 
+Version 1.1.4
+~~~~~~~~~~~~~
+
+- ``setproctitle()`` accepts a keyword argument.
+
+
 Version 1.1.3
 ~~~~~~~~~~~~~
 
